# hasvg

./: README.md  hasvg.cabal
src/Codec/Picture/SVG/: Read.hs  Tags.hs
